fix: ads z-index

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ p.description {
     border-radius: 8px;
     max-width: 728px;
     position: relative;
-    z-index: -1;
+    z-index: 0;
 }
 
 .item-card {
